--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-<head>  
+
+<head>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
@@ -36,12 +37,13 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <img src="images/pizzeria.jpg" class="img-responsive">
+        <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-12">
-            <h2>We Have Hundreds of Pizza Recipes!</h2>            
+            <h2>We Have Hundreds of Pizza Recipes!</h2>
             <p>At Cam's Pizzeria, we know you want options. Pepperoni? Boring. Cheese? No way! Sausage? C'mon, let's get creative.</p>
 
             <p>We have every pizza ingredient imaginable in our kitchen because we know you take choice seriously. Take a look through our menu of hundreds of pizza options and we know that you'll find something you love.</p>
@@ -80,11 +82,17 @@
         <div class="row">
           <div class="col-md-6">
             <h3>Pizza Road</h3>
-            <p>1800 Pizza Road<br>San Francisco, CA<br>01010<br>555-555-5555</p>
+            <p>1800 Pizza Road
+              <br>San Francisco, CA
+              <br>01010
+              <br>555-555-5555</p>
           </div>
           <div class="col-md-6">
             <h3>Classic Pie Way</h3>
-            <p>999 Classic Pie Way<br>New York, NY<br>00100<br>555-555-5555</p>
+            <p>999 Classic Pie Way
+              <br>New York, NY
+              <br>00100
+              <br>555-555-5555</p>
           </div>
         </div>
       </div>
